# linkey-netbox-billing

./: .env.example  .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
billmanager/: cli.py  config.py  factory.py  models.py
billmanager/clients/: billmanager.py  netbox.py
billmanager/sync/: adapters.py  engine.py
billmanager/webhook/: app.py
deploy/: DEPLOY.md  billmanager-webhook.service  nginx-billmanager.conf
deploy/sandbox/: bootstrap.sh  docker-compose.yml  env.sandbox.example
linkey_billing/: __init__.py  cli.py  config.py  logging.py
linkey_billing/clients/: netbox.py
linkey_billing/sync/: engine.py
linkey_billing/webhook/: app.py
tests/: test_adapters.py  test_billmanager_normalize.py  test_prod_guard.py  test_provision.py
