[project]
name = "linkey-netbox-billing"
version = "0.1.0"
description = "Интеграция между NetBox (IPAM/DCIM) и BillManager (ISPsystem)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pynetbox>=7.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
linkey-billing = "linkey_billing.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkey_billing"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
